// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wrappers / Modal Integration shall pass integration sanity test 1`] = `
"<transition-stub name="fade">
  <article class="modal">
    <div class="modal__frame">
      <h1 class="modal__title title title--design-2 title--underscore">Test title</h1>
      <div class="modal__canvas">This is default slot test</div>
    </div>
  </article>
</transition-stub>"
`;

exports[`Wrappers / Modal Unit shall pass unit sanity test 1`] = `
"<transition-stub name="fade">
  <article class="modal">
    <div class="modal__frame">
      <componentstitle-stub type="1" design="2" title="Test title" class="modal__title"></componentstitle-stub>
      <div class="modal__canvas">This is default slot test</div>
    </div>
  </article>
</transition-stub>"
`;
